Update for API change in jdk.javadoc module. Also remove module-info.java since Maven dependencies are not yet modularized.
git-svn-id: https://svn.apache.org/repos/asf/sis/branches/JDK9@1791494 13f79535-47bb-0310-9956-ffa450edef68